--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,11 @@ android {
     signingConfigs {
     }
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.example.school.organizer"
         minSdkVersion 21
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -21,11 +22,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile files('libs/gson-2.4.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:24.2.0'
+    implementation 'com.google.android.gms:play-services:9.4.0'
+    implementation 'com.android.support:support-v4:24.2.0'
+    implementation 'com.android.support:design:24.2.0'
+    implementation files('libs/gson-2.4.jar')
 }
